# automate

./: .gitignore  README.md  consumer.py  producer.py  pyproject.toml  request_dispatch.py  request_telegram.py  telegram_pulling_bot.py  thumbnail_1l.thl  try_check_custom_api_codex.py  try_custom_api.py  try_upload_markdown.py
.cursor/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.github/workflows/: dispatch-transcribe.yml
src/automate/: __init__.py  airtable_lib.py  async_lib.py  cli.py  main.py  summary_lib.py  youtube_lib.py  요약_프롬프트.md
src/automate/cli/: __init__.py  utils.py
src/automate/cli/commands/: __init__.py  custom_api.py  dispatch.py  serve.py  telegram.py  transcribe.py  worker.py
src/automate/core/: __init__.py  config.py  constants.py
src/automate/custom_api/: __init__.py  app.py  config.py  models.py  queue.py
src/automate/custom_api/func/: __init__.py  task_status.py  upload_markdown.py
src/automate/custom_api/providers/: __init__.py  base.py  codex.py  cursor.py  gemini.py  openai.py  opencode.py
src/automate/custom_api/tasks/: __init__.py  upload_markdown.py
src/automate/scripts/: get_transcript.py
src/automate/services/airtable/: __init__.py  client.py  repository.py
src/automate/services/summary/: __init__.py  formatter.py  generator.py  prompt.py  provider_factory.py
src/automate/services/telegram/: __init__.py  bot.py  sender.py  webhook.py
src/automate/services/telegram/tasks/: README.md  __init__.py  base.py  shorts_task.py  summary_task.py
src/automate/services/youtube/: __init__.py  extractor.py  metadata.py  processor.py  transcript.py
src/automate/utils/: __init__.py  async_utils.py  cache.py  transcript_utils.py  youtube_utils.py
