[project]
name = "automate"
version = "0.1.31"
description = "private automate server"
authors = [
    { name = "David Cho", email = "csi00700@gmail.com" }
]
dependencies = [
    "youtube-transcript-api>=1.0.3",
    "click>=8.1.8",
    "hypercorn>=0.17.3",
    "fastapi>=0.115.12",
    "python-dotenv>=1.1.0",
    "pyairtable>=3.1.1",
    "openai>=1.76.2",
    "bs4>=0.0.2",
]
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
automate = "automate:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "rye-easy>=0.1.29",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/automate"]

[tool.hatch.build]
artifacts = [
    "src/automate/**/*.py",
    "src/automate/**/*.pyc",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/**",
    "pyproject.toml",
    "README.md"
]
exclude = ["*.pyc", "dist", "build/**"]

[dependency-groups]
dev = [
    "rye-easy>=0.1.29",
]
