[project]
name = "automate"
version = "0.1.44"
description = "private automate server"
authors = [
    { name = "David Cho", email = "csi00700@gmail.com" }
]
dependencies = [
    "youtube-transcript-api>=1.0.3",
    "click>=8.1.8",
    "hypercorn>=0.17.3",
    "fastapi>=0.115.12",
    "python-dotenv>=1.1.0",
    "pyairtable>=3.1.1",
    "openai>=1.78.0",
    "bs4>=0.0.2",
    "python-telegram-bot[ext]>=22.0",
    "loguru>=0.7.3",
    "pyzmq>=26.4.0",
    "selenium>=4.32.0",
    "webdriver-manager>=4.0.2",
    "tqdm>=4.67.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "google-generativeai>=0.8.5",
]
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
automate = "automate:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "rye-easy>=0.1.29",
    "autopep8>=2.3.2",
    "autoflake>=2.3.1",
    "isort>=6.0.1",
    "black>=25.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/automate"]

[tool.hatch.build]
artifacts = [
    "src/automate/**/*.py",
    "src/automate/**/*.pyc",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/**",
    "pyproject.toml",
    "README.md"
]
exclude = ["*.pyc", "dist", "build/**"]

[dependency-groups]
dev = [
    "rye-easy>=0.1.29",
]
